integration tests, scheduler, started implementing redis, changes on modules